include/parser/grammar/RegexParser.cpp

// Generated from /Users/melzarei/Documents/code-compiling-regex/include/parser/grammar/Regex.g4 by ANTLR 4.9.3


#include "RegexVisitor.h"

#include "RegexParser.h"


using namespace antlrcpp;
using namespace antlr4;

RegexParser::RegexParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

RegexParser::~RegexParser() {
  delete _interpreter;
}

std::string RegexParser::getGrammarFileName() const {
  return "Regex.g4";
}

const std::vector<std::string>& RegexParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& RegexParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RegexContext ------------------------------------------------------------------

RegexParser::RegexContext::RegexContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RegexParser::AlternationContext* RegexParser::RegexContext::alternation() {
  return getRuleContext<RegexParser::AlternationContext>(0);
}

tree::TerminalNode* RegexParser::RegexContext::EOF() {
  return getToken(RegexParser::EOF, 0);
}


size_t RegexParser::RegexContext::getRuleIndex() const {
  return RegexParser::RuleRegex;
}


antlrcpp::Any RegexParser::RegexContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitRegex(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::RegexContext* RegexParser::regex() {
  RegexContext *_localctx = _tracker.createInstance<RegexContext>(_ctx, getState());
  enterRule(_localctx, 0, RegexParser::RuleRegex);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    alternation();
    setState(31);
    match(RegexParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AlternationContext ------------------------------------------------------------------

RegexParser::AlternationContext::AlternationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RegexParser::ExpressionContext *> RegexParser::AlternationContext::expression() {
  return getRuleContexts<RegexParser::ExpressionContext>();
}

RegexParser::ExpressionContext* RegexParser::AlternationContext::expression(size_t i) {
  return getRuleContext<RegexParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> RegexParser::AlternationContext::Pipe() {
  return getTokens(RegexParser::Pipe);
}

tree::TerminalNode* RegexParser::AlternationContext::Pipe(size_t i) {
  return getToken(RegexParser::Pipe, i);
}


size_t RegexParser::AlternationContext::getRuleIndex() const {
  return RegexParser::RuleAlternation;
}


antlrcpp::Any RegexParser::AlternationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitAlternation(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::AlternationContext* RegexParser::alternation() {
  AlternationContext *_localctx = _tracker.createInstance<AlternationContext>(_ctx, getState());
  enterRule(_localctx, 2, RegexParser::RuleAlternation);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    expression();
    setState(38);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == RegexParser::Pipe) {
      setState(34);
      match(RegexParser::Pipe);
      setState(35);
      expression();
      setState(40);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

RegexParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RegexParser::ElementContext *> RegexParser::ExpressionContext::element() {
  return getRuleContexts<RegexParser::ElementContext>();
}

RegexParser::ElementContext* RegexParser::ExpressionContext::element(size_t i) {
  return getRuleContext<RegexParser::ElementContext>(i);
}


size_t RegexParser::ExpressionContext::getRuleIndex() const {
  return RegexParser::RuleExpression;
}


antlrcpp::Any RegexParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::ExpressionContext* RegexParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 4, RegexParser::RuleExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << RegexParser::INT)
      | (1ULL << RegexParser::Wildcard)
      | (1ULL << RegexParser::CharacterClassStart)
      | (1ULL << RegexParser::Underscore)
      | (1ULL << RegexParser::OpenParen)
      | (1ULL << RegexParser::EscapeChar)
      | (1ULL << RegexParser::LETTER))) != 0)) {
      setState(41);
      element();
      setState(46);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

RegexParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RegexParser::AtomContext* RegexParser::ElementContext::atom() {
  return getRuleContext<RegexParser::AtomContext>(0);
}

RegexParser::QuantifierContext* RegexParser::ElementContext::quantifier() {
  return getRuleContext<RegexParser::QuantifierContext>(0);
}


size_t RegexParser::ElementContext::getRuleIndex() const {
  return RegexParser::RuleElement;
}


antlrcpp::Any RegexParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::ElementContext* RegexParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 6, RegexParser::RuleElement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    atom();
    setState(49);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << RegexParser::Plus)
      | (1ULL << RegexParser::Asterisk)
      | (1ULL << RegexParser::Qmark)
      | (1ULL << RegexParser::OpenBrace))) != 0)) {
      setState(48);
      quantifier();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantifierContext ------------------------------------------------------------------

RegexParser::QuantifierContext::QuantifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RegexParser::QuantifierContext::Asterisk() {
  return getToken(RegexParser::Asterisk, 0);
}

tree::TerminalNode* RegexParser::QuantifierContext::Plus() {
  return getToken(RegexParser::Plus, 0);
}

tree::TerminalNode* RegexParser::QuantifierContext::Qmark() {
  return getToken(RegexParser::Qmark, 0);
}

tree::TerminalNode* RegexParser::QuantifierContext::OpenBrace() {
  return getToken(RegexParser::OpenBrace, 0);
}

tree::TerminalNode* RegexParser::QuantifierContext::CloseBrace() {
  return getToken(RegexParser::CloseBrace, 0);
}

std::vector<RegexParser::NumberContext *> RegexParser::QuantifierContext::number() {
  return getRuleContexts<RegexParser::NumberContext>();
}

RegexParser::NumberContext* RegexParser::QuantifierContext::number(size_t i) {
  return getRuleContext<RegexParser::NumberContext>(i);
}

tree::TerminalNode* RegexParser::QuantifierContext::Comma() {
  return getToken(RegexParser::Comma, 0);
}


size_t RegexParser::QuantifierContext::getRuleIndex() const {
  return RegexParser::RuleQuantifier;
}


antlrcpp::Any RegexParser::QuantifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitQuantifier(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::QuantifierContext* RegexParser::quantifier() {
  QuantifierContext *_localctx = _tracker.createInstance<QuantifierContext>(_ctx, getState());
  enterRule(_localctx, 8, RegexParser::RuleQuantifier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(64);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RegexParser::Asterisk: {
        enterOuterAlt(_localctx, 1);
        setState(51);
        match(RegexParser::Asterisk);
        break;
      }

      case RegexParser::Plus: {
        enterOuterAlt(_localctx, 2);
        setState(52);
        match(RegexParser::Plus);
        break;
      }

      case RegexParser::Qmark: {
        enterOuterAlt(_localctx, 3);
        setState(53);
        match(RegexParser::Qmark);
        break;
      }

      case RegexParser::OpenBrace: {
        enterOuterAlt(_localctx, 4);
        setState(54);
        match(RegexParser::OpenBrace);
        setState(55);
        antlrcpp::downCast<QuantifierContext *>(_localctx)->min = number();
        setState(60);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == RegexParser::Comma) {
          setState(56);
          match(RegexParser::Comma);
          setState(58);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == RegexParser::INT) {
            setState(57);
            antlrcpp::downCast<QuantifierContext *>(_localctx)->max = number();
          }
        }
        setState(62);
        match(RegexParser::CloseBrace);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumberContext ------------------------------------------------------------------

RegexParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> RegexParser::NumberContext::INT() {
  return getTokens(RegexParser::INT);
}

tree::TerminalNode* RegexParser::NumberContext::INT(size_t i) {
  return getToken(RegexParser::INT, i);
}


size_t RegexParser::NumberContext::getRuleIndex() const {
  return RegexParser::RuleNumber;
}


antlrcpp::Any RegexParser::NumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitNumber(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::NumberContext* RegexParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 10, RegexParser::RuleNumber);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(66);
      match(RegexParser::INT);
      setState(69); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == RegexParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtomContext ------------------------------------------------------------------

RegexParser::AtomContext::AtomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RegexParser::CharacterContext* RegexParser::AtomContext::character() {
  return getRuleContext<RegexParser::CharacterContext>(0);
}

RegexParser::CharacterClassContext* RegexParser::AtomContext::characterClass() {
  return getRuleContext<RegexParser::CharacterClassContext>(0);
}

tree::TerminalNode* RegexParser::AtomContext::Wildcard() {
  return getToken(RegexParser::Wildcard, 0);
}

tree::TerminalNode* RegexParser::AtomContext::OpenParen() {
  return getToken(RegexParser::OpenParen, 0);
}

tree::TerminalNode* RegexParser::AtomContext::CloseParen() {
  return getToken(RegexParser::CloseParen, 0);
}

RegexParser::AlternationContext* RegexParser::AtomContext::alternation() {
  return getRuleContext<RegexParser::AlternationContext>(0);
}


size_t RegexParser::AtomContext::getRuleIndex() const {
  return RegexParser::RuleAtom;
}


antlrcpp::Any RegexParser::AtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitAtom(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::AtomContext* RegexParser::atom() {
  AtomContext *_localctx = _tracker.createInstance<AtomContext>(_ctx, getState());
  enterRule(_localctx, 12, RegexParser::RuleAtom);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(78);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RegexParser::INT:
      case RegexParser::EscapeChar:
      case RegexParser::LETTER: {
        enterOuterAlt(_localctx, 1);
        setState(71);
        character();
        break;
      }

      case RegexParser::CharacterClassStart:
      case RegexParser::Underscore: {
        enterOuterAlt(_localctx, 2);
        setState(72);
        characterClass();
        break;
      }

      case RegexParser::Wildcard: {
        enterOuterAlt(_localctx, 3);
        setState(73);
        match(RegexParser::Wildcard);
        break;
      }

      case RegexParser::OpenParen: {
        enterOuterAlt(_localctx, 4);
        setState(74);
        match(RegexParser::OpenParen);
        setState(75);
        antlrcpp::downCast<AtomContext *>(_localctx)->capture = alternation();
        setState(76);
        match(RegexParser::CloseParen);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharacterContext ------------------------------------------------------------------

RegexParser::CharacterContext::CharacterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RegexParser::RegularCharacterContext* RegexParser::CharacterContext::regularCharacter() {
  return getRuleContext<RegexParser::RegularCharacterContext>(0);
}

tree::TerminalNode* RegexParser::CharacterContext::EscapeChar() {
  return getToken(RegexParser::EscapeChar, 0);
}

RegexParser::SpecialCharContext* RegexParser::CharacterContext::specialChar() {
  return getRuleContext<RegexParser::SpecialCharContext>(0);
}


size_t RegexParser::CharacterContext::getRuleIndex() const {
  return RegexParser::RuleCharacter;
}


antlrcpp::Any RegexParser::CharacterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitCharacter(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::CharacterContext* RegexParser::character() {
  CharacterContext *_localctx = _tracker.createInstance<CharacterContext>(_ctx, getState());
  enterRule(_localctx, 14, RegexParser::RuleCharacter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(83);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RegexParser::INT:
      case RegexParser::LETTER: {
        enterOuterAlt(_localctx, 1);
        setState(80);
        regularCharacter();
        break;
      }

      case RegexParser::EscapeChar: {
        enterOuterAlt(_localctx, 2);
        setState(81);
        match(RegexParser::EscapeChar);
        setState(82);
        specialChar();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharacterClassContext ------------------------------------------------------------------

RegexParser::CharacterClassContext::CharacterClassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t RegexParser::CharacterClassContext::getRuleIndex() const {
  return RegexParser::RuleCharacterClass;
}

void RegexParser::CharacterClassContext::copyFrom(CharacterClassContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CcPositiveContext ------------------------------------------------------------------

tree::TerminalNode* RegexParser::CcPositiveContext::CharacterClassStart() {
  return getToken(RegexParser::CharacterClassStart, 0);
}

tree::TerminalNode* RegexParser::CcPositiveContext::CharacterClassEnd() {
  return getToken(RegexParser::CharacterClassEnd, 0);
}

std::vector<RegexParser::ClassMemberContext *> RegexParser::CcPositiveContext::classMember() {
  return getRuleContexts<RegexParser::ClassMemberContext>();
}

RegexParser::ClassMemberContext* RegexParser::CcPositiveContext::classMember(size_t i) {
  return getRuleContext<RegexParser::ClassMemberContext>(i);
}

RegexParser::CcPositiveContext::CcPositiveContext(CharacterClassContext *ctx) { copyFrom(ctx); }


antlrcpp::Any RegexParser::CcPositiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitCcPositive(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AnyCharContext ------------------------------------------------------------------

tree::TerminalNode* RegexParser::AnyCharContext::Underscore() {
  return getToken(RegexParser::Underscore, 0);
}

RegexParser::AnyCharContext::AnyCharContext(CharacterClassContext *ctx) { copyFrom(ctx); }


antlrcpp::Any RegexParser::AnyCharContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitAnyChar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CcNegativeContext ------------------------------------------------------------------

tree::TerminalNode* RegexParser::CcNegativeContext::CharacterClassStart() {
  return getToken(RegexParser::CharacterClassStart, 0);
}

tree::TerminalNode* RegexParser::CcNegativeContext::Caret() {
  return getToken(RegexParser::Caret, 0);
}

tree::TerminalNode* RegexParser::CcNegativeContext::CharacterClassEnd() {
  return getToken(RegexParser::CharacterClassEnd, 0);
}

std::vector<RegexParser::ClassMemberContext *> RegexParser::CcNegativeContext::classMember() {
  return getRuleContexts<RegexParser::ClassMemberContext>();
}

RegexParser::ClassMemberContext* RegexParser::CcNegativeContext::classMember(size_t i) {
  return getRuleContext<RegexParser::ClassMemberContext>(i);
}

RegexParser::CcNegativeContext::CcNegativeContext(CharacterClassContext *ctx) { copyFrom(ctx); }


antlrcpp::Any RegexParser::CcNegativeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitCcNegative(this);
  else
    return visitor->visitChildren(this);
}
RegexParser::CharacterClassContext* RegexParser::characterClass() {
  CharacterClassContext *_localctx = _tracker.createInstance<CharacterClassContext>(_ctx, getState());
  enterRule(_localctx, 16, RegexParser::RuleCharacterClass);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<RegexParser::AnyCharContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(85);
      match(RegexParser::Underscore);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<RegexParser::CcPositiveContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(86);
      match(RegexParser::CharacterClassStart);
      setState(88); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(87);
        antlrcpp::downCast<CcPositiveContext *>(_localctx)->positive = classMember();
        setState(90); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << RegexParser::T__0)
        | (1ULL << RegexParser::INT)
        | (1ULL << RegexParser::EscapeChar)
        | (1ULL << RegexParser::LETTER))) != 0));
      setState(92);
      match(RegexParser::CharacterClassEnd);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<RegexParser::CcNegativeContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(94);
      match(RegexParser::CharacterClassStart);
      setState(95);
      match(RegexParser::Caret);
      setState(97); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(96);
        antlrcpp::downCast<CcNegativeContext *>(_localctx)->negative = classMember();
        setState(99); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << RegexParser::T__0)
        | (1ULL << RegexParser::INT)
        | (1ULL << RegexParser::EscapeChar)
        | (1ULL << RegexParser::LETTER))) != 0));
      setState(101);
      match(RegexParser::CharacterClassEnd);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassMemberContext ------------------------------------------------------------------

RegexParser::ClassMemberContext::ClassMemberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RegexParser::CharacterContext* RegexParser::ClassMemberContext::character() {
  return getRuleContext<RegexParser::CharacterContext>(0);
}

RegexParser::RangeContext* RegexParser::ClassMemberContext::range() {
  return getRuleContext<RegexParser::RangeContext>(0);
}

RegexParser::PredefinedClassContext* RegexParser::ClassMemberContext::predefinedClass() {
  return getRuleContext<RegexParser::PredefinedClassContext>(0);
}


size_t RegexParser::ClassMemberContext::getRuleIndex() const {
  return RegexParser::RuleClassMember;
}


antlrcpp::Any RegexParser::ClassMemberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitClassMember(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::ClassMemberContext* RegexParser::classMember() {
  ClassMemberContext *_localctx = _tracker.createInstance<ClassMemberContext>(_ctx, getState());
  enterRule(_localctx, 18, RegexParser::RuleClassMember);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(105);
      character();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(106);
      range();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(107);
      predefinedClass();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RangeContext ------------------------------------------------------------------

RegexParser::RangeContext::RangeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RegexParser::RangeContext::Hyphen() {
  return getToken(RegexParser::Hyphen, 0);
}

std::vector<RegexParser::CharacterContext *> RegexParser::RangeContext::character() {
  return getRuleContexts<RegexParser::CharacterContext>();
}

RegexParser::CharacterContext* RegexParser::RangeContext::character(size_t i) {
  return getRuleContext<RegexParser::CharacterContext>(i);
}


size_t RegexParser::RangeContext::getRuleIndex() const {
  return RegexParser::RuleRange;
}


antlrcpp::Any RegexParser::RangeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitRange(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::RangeContext* RegexParser::range() {
  RangeContext *_localctx = _tracker.createInstance<RangeContext>(_ctx, getState());
  enterRule(_localctx, 20, RegexParser::RuleRange);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    antlrcpp::downCast<RangeContext *>(_localctx)->min = character();
    setState(111);
    match(RegexParser::Hyphen);
    setState(112);
    antlrcpp::downCast<RangeContext *>(_localctx)->max = character();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PredefinedClassContext ------------------------------------------------------------------

RegexParser::PredefinedClassContext::PredefinedClassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RegexParser::PredefinedClassNameContext* RegexParser::PredefinedClassContext::predefinedClassName() {
  return getRuleContext<RegexParser::PredefinedClassNameContext>(0);
}


size_t RegexParser::PredefinedClassContext::getRuleIndex() const {
  return RegexParser::RulePredefinedClass;
}


antlrcpp::Any RegexParser::PredefinedClassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitPredefinedClass(this);
  else
    return visitor->visitChildren(this);
}

RegexParser::PredefinedClassContext* RegexParser::predefinedClass() {
  PredefinedClassContext *_localctx = _tracker.createInstance<PredefinedClassContext>(_ctx, getState());
  enterRule(_localctx, 22, RegexParser::RulePredefinedClass);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(RegexParser::T__0);
    setState(115);
    predefinedClassName();
    setState(116);
    match(RegexParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PredefinedClassNameContext ------------------------------------------------------------------

RegexParser::PredefinedClassNameContext::PredefinedClassNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t RegexParser::PredefinedClassNameContext::getRuleIndex() const {
  return RegexParser::RulePredefinedClassName;
}


antlrcpp::Any RegexParser::PredefinedClassNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RegexVisitor*>(visitor))
    return parserVisitor->visitPredefinedClassName(this);
  else
    return visitor->visitChildren(this);
}
